# apply-for-a-licence

./: Makefile  README.md  compose.yaml  pyproject.toml
apply_for_a_licence/apply_for_a_licence/: settings.py
apply_for_a_licence/apply_for_a_licence/models/: authorities.py
apply_for_a_licence/apply_for_a_licence/tests/model/: test_authorities.py
common/enums/: interaction_id_codes.py  tacit_consent.py
common/models/: authorities.py  department.py  licences.py  utils.py
common/tests/model/: test_authorities.py  test_licences.py
config/: asgi.py  settings.py  wsgi.py
