[project]
name = "apply-for-a-licence"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django==5.2.0",
    "django-mongodb-backend>=5.2.3",
    "pymongo>=4.17.0",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "apply_for_a_licence.settings"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 120

extend-exclude = [
    "migrations/versions/",
    "__pycache__",
    "cache",
    "migrations",
]

[tool.ruff.lint]
extend-select = [
    "DJ",
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C90",  # mccabe cyclomatic complexity
    "G",  # flake8-logging-format
    "T20", # flake8-print
    "C4",  # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "RSE",  # flake8-raise
    "PIE",  # flake8-pie
    "N804",  # First argument of a class method should be named `cls`
    "RUF100",  # Checks for noqa directives that are no longer applicable
]
